<resources>
    <string name="app_name">ScoreKeeper3</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="fcb">FC Barcelona</string>
    <string name="goal">Goal</string>
    <string name="foul">Foul</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="reset">Reset</string>
    <string name="action_settings">Settings</string>
</resources>
