<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ola.scorekeeper3.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/field2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/real_madrid"
                android:textColor="#FFFFFF"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:padding="10dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fcb"
                android:textColor="#FFFFFF"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="14dp"
            android:paddingLeft="14dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center"   >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/real" />

            </LinearLayout>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:fontFamily="sans-serif-light"
                android:text="2"
                android:textColor="#FFFFFF"
                android:textSize="56sp"
                android:gravity="center"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="56sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:fontFamily="sans-serif-light"
                android:text="1"
                android:textColor="#FFFFFF"
                android:textSize="56sp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/barcelona" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addGoalForTeamA"
                    android:text="@string/goal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addGoalForTeamB"
                    android:text="@string/goal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addYellowForTeamA"
                android:text="@string/yellow" />

            <TextView
                android:id="@+id/yellows_TeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffcf00"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="60dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/yellows_TeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffcf00"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addYellowForTeamB"
                android:text="@string/yellow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addRedForTeamA"
                android:text="@string/red" />

            <TextView
                android:id="@+id/reds_TeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ff4646"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="60dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/reds_TeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ff4646"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:paddingLeft="8dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addRedForTeamB"
                android:text="@string/red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addFoulForTeamA"
                android:text="@string/foul" />

            <TextView
                android:id="@+id/fouls_TeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#555"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <View
                android:layout_width="60dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/fouls_TeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#555"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:paddingLeft="8dp"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addFoulForTeamB"
                android:text="@string/foul" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset" />

</RelativeLayout>